--- a/Report/uu_cern_thesis_report.tex
+++ b/Report/uu_cern_thesis_report.tex
@@ -67,7 +67,7 @@ So this abstract should be about 100-200 words so I'm just writing some natural 
 % === Introduction ===
 %----------------------------------------------------------------------------
 \newpage
-\section{Introduction}
+\section{Introduction}\label{sec_intro}
 
 \color{red}
 describe the problem in detail \\
@@ -84,19 +84,19 @@ problem: \\
 \color{black}
 \vspace{1.5pc}
 
-\subsection{About CERN}
+\subsection{About CERN}\label{sec_about_cern}
 
 CERN (European Organization for Nuclear Research) is an international high energy experimental physics research organization situated near Geneva, on the Franco-Swiss border. CERN is host to the world's largest particle accelerator and numerous experiments which aim to provide a better understanding of the universe. The goals of the experiments, among others, are to verify the standard model of particles. \textcolor{cyan}{TODO: list more concrete goals}.
 \cite{cern_about}
 
-\subsection{What are particle accelerators}
+\subsection{What are particle accelerators}\label{sec_part_accel_intro}
 
-\subsubsection{Idea and purpose of accelerators}
+\subsubsection{Idea and purpose of accelerators}\label{sec_part_accel_idea}
 Particle accelerators, as the name suggests, accelerate charged particles to extremely high velocities. Generally, the accelerated particles are elementary particles, such as protons or electrons, or ions. CERN mainly operates with protons and lead ions, though we can see other particles as well. The velocity of the particles often approaches that of the speed of light in vacuum. CERN's first particle accelerator, the Synchrocyclotron, reached about 80\% of the speed of light, whereas CERN's largest accelerator's, the LHC, accelerates its protons to 99.9999991\% \cite{lhc_facts_and_figures} of the speed of light.
 
 The high-speed particles are made to collide with a stationary target or each other (particles of opposing directions having a frontal collision), which results in a shower of new-born particles flying away from the collision point. In high-energy collisions, exotic particles that are normally not seen are born, and their properties can be examined to advance the scientific field of particle physics.
 
-\subsubsection{Theory of operation}
+\subsubsection{Theory of operation}\label{sec_part_accel_theory}
 
 \begin{figure}[H]
 	\begin{center}
@@ -123,12 +123,12 @@ In addition to deflecting magnets, accelerators also employ \textit{focusing mag
 
 Linear accelerators contain the same functional elements as circular ones, except for the fact that they don't need deflecting magnets since the particles travel in a straight path.
 
-\subsubsection{Particle colliders}
+\subsubsection{Particle colliders}\label{sec_part_collider}
 
 As opposed to particle accelerators, colliders operate with two beams at the same time. A circular collider, such as the LHC, has two beam pipes right next to each other in the circular tunnel. The two beams circle in the opposing directions. At some specific points, the two beam pipes are made to cross, and as the particle beams intersect, the bunches collide with each other as opposed to colliding with a fixed target.
 
 
-\subsection{The accelerator complex \cite{cern_accel_complex}}
+\subsection{The accelerator complex \cite{cern_accel_complex}}\label{sec_accel_complex}
 
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{accelerator_complex}
