--- a/Report/uu_cern_thesis_report.tex
+++ b/Report/uu_cern_thesis_report.tex
@@ -103,10 +103,10 @@ The high-speed particles are made to collide with a stationary target or each ot
 		\includegraphics[width=0.5\textwidth]{particle_accelerator_schematic}
 	\end{center}
 	\caption{Simplified schematic of a circular particle accelerator with the crucial functional parts labeled.}
-	\label{fig_part_acceL_schematic}
+	\label{fig_part_accel_schematic}
 \end{figure}
 
-Particle accelerators can be circular or linear. Figure \ref{fig_part_acceL_schematic} depicts a circular accelerator, which consists of the following parts:
+Particle accelerators can be circular or linear. Figure \ref{fig_part_accel_schematic} depicts a circular accelerator, which consists of the following parts:
 \begin{itemize}
 	\item Evacuated tube (beam pipe): a closed, circular tube in which the particles can travel. To avoid the particles colliding with air particles, it is strictly under vacuum.
 	\item Particle source: injects the particles into the beam pipe. For proton accelerators, a bottle of hydrogen serves as the source. The hydrogen atoms are ionized, and then linearly accelerated by an electric field before entering the circular beam pipe.
@@ -142,9 +142,9 @@ The largest circle, in dark blue, is LHC, which is the world's largest and most 
 
 Inside the LHC, we can find two beams going in the opposite directions. The energy of each particle reaches about 7 TeVs at maximum. The two beams cross each other and particles collide at 4 points, marked CMS, ALICE, LHCb and ATLAS. At these points, complex particle detectors are installed to analyze the collisions. Detectors track the path of the particles, and make measurements on their properties such as momentum, charge and mass. From the collection of properties, particles can be identified. Measurements provide valuable data to physicists who are trying to verify and extend the standard model of particles. In most cases, the raw data provided by the detectors is processed by software.
 
-\subsection{LHCb experiment's detector}
+\subsection{LHCb experiment's detector}\label{sec_lhcb_detector}
 	
-\subsubsection{Construction of the detector}
+\subsubsection{Construction of the detector}\label{sec_lhcb_det_constr}
 
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{lhcb_geometry_upgrade}
@@ -158,7 +158,14 @@ As seen on the labels, the detector consists of multiple layers of sub-detectors
 
 The goal of the LHCb detector is the same as for all other detectors: reconstruct the paths and types of the particles. Even though full reconstruction uses all sub-detectors, we are only interested in partial reconstruction that can be done in real-time. This only involves the VELO, the UT (in orange, left of VELO) and the FT (SciFi Tracker, in the middle in orange).
 
-\subsubsection{Operating principles}
+\subsubsection{Coordinate system}\label{sec_coordinate_system}
+
+When doing calculatings, the detector must be placed in a 3 dimensional euclidean space. The coordinate axis are chosen so that Z down the beam pipe from the VELO towards the SciFi tracker, X points to the right when lookind down the Z axis, and Y points upwards.
+
+\textcolor{red}{TODO: add a picture}
+
+
+\subsubsection{Operating principles}\label{sec_lhcb_det_theory}
 
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{lbevent_collision_example}
@@ -197,18 +204,18 @@ When a collision occurs, the particles follow a straight path and they are recor
 
 At the end of the process, the all the pixels or fibers that were touched by a particle are known, which makes it possible to know the exact path of the particle. The amount of bending from the UT to the FT allows the calculation of the momentum, which, when paired with information from other detectors, such as energy and velocity, makes it possible to identify a particle. (Identification means knowing the name of the particle, such as electron or muon.)
 
-\subsection{Events and triggering}
+\subsection{Events and triggering}\label{sec_events_trigger}
 
-\subsubsection{Collision events}
+\subsubsection{Collision events}\label{sec_event_what}
 
 As explained earlier, the LHC has 2808 bunches of protons circulating in both directions in the two beam pipes. We refer to the collision of the of these bunches as an \textit{event}. Events are completely independent, that is, a bunch-bunch collision only happens after the previous collision's products have been analyzed and flushed from the detector. At nearly the speed of light, a particle takes 89 microseconds to do a revolution in the circular detector of 26 659 m circumference. The 2808 bunches are however spaced at a distance of 25 nanoseconds from each-other, giving way to at most 40 million collisions every second. Calculating with 2808 bunches and 89 microseconds, the bunch spacing should be 31.7 nanoseconds. There are, however, some longer gaps in the line of 2808 bunches, so two adjacent bunches are still 25 nanoseconds away. This is why, in practice, there are only roughly 30 million collisions a second, but the processing of that has to happen as fast as 40 million a second.
 
-\subsubsection{Real-time reconstruction and triggering}
+\subsubsection{Real-time reconstruction and triggering}\label{sec_trigger_what}
 
 Most of the 30 million events that occur every second are absolutely uninteresting, with no exotic particles of interest being created. On the other hand, each event amounts to a significant amount of data which is a challenge to store. To reduce the amount of data to be stored, each event is processed in real-time to determine weather it is interesting or not. Uninteresting events are simply dropped, the interesting ones go to long-term storage for further analysis. The act of deciding if an event has to be stored is called \textit{triggering}. The real-time processing of events is a simplified method that relies on the VELO, UT and FT detectors as described previously.
 
 
-\subsection{The 2019/20 upgrade of LHCb}
+\subsection{The 2019/20 upgrade of LHCb}\label{sec_lhcb_upgrade}
 
 The LHC shuts down for maintenance for two years from the end of 2018. The LHCb detector also undergoes maintenance and upgrade during that time, where the VELO is upgraded and the old TT is entirely replaced by the UT.
 
@@ -233,8 +240,7 @@ The pre-upgrade detector does the real-time event processing in two stages. The 
 \end{figure}
 
 
-\subsection{Overview of the real-time processing software}
-\label{intro_algos_overview}
+\subsection{Overview of the real-time processing software}\label{sec_reco_sw_overview}
 	
 \begin{figure}[H]
 	\begin{center}
@@ -274,7 +280,7 @@ During this thesis project, I will be helping the LHCb collaboration to reach it
 Explain the choice of initial choice of algorithms, based on the pie chart diagram and logical reasoning of our goals (i.e. what's needed).
 \color{black}
 
-As mentioned in \ref{intro_algos_overview}, the reconstruction consists of individual algorithms which account for the bulk of the computation. (Scheduling the algorithms and culling decisions account for a much smaller CPU load.) It is straightforward to first start optimizing the algorithms which take the largest chunk of available computing power.
+As mentioned in \ref{sec_reco_sw_overview}, the reconstruction consists of individual algorithms which account for the bulk of the computation. (Scheduling the algorithms and culling decisions account for a much smaller CPU load.) It is straightforward to first start optimizing the algorithms which take the largest chunk of available computing power.
 
 \begin{figure}[H]
 	\begin{center}
@@ -291,7 +297,7 @@ Looking at figure \ref{fig_algo_usage_choice}, we can see that the parametrized 
 %----------------------------------------------------------------------------
 \section{Parametrized Kalman Fitter}
 
-As described in \ref{intro_algos_overview}, the track is reconstructed incrementally, start with velo hits, extended by UT hits and finally adding the FT hits. This process, however, is not so accurate. This manifests itself in the creation of \textit{ghost tracks} and missed tracks, and generally, tracks are only roughly aligned with the hits they were made from. Ghost tracks are tracks that did not exist in the real collision, they are merely artifacts of the reconstruction algorithms. As such, ghost tracks are highly undesirable, but this is where the Kalman fitter comes into play. 
+As described in \ref{sec_reco_sw_overview}, the track is reconstructed incrementally, start with velo hits, extended by UT hits and finally adding the FT hits. This process, however, is not so accurate. This manifests itself in the creation of \textit{ghost tracks} and missed tracks, and generally, tracks are only roughly aligned with the hits they were made from. Ghost tracks are tracks that did not exist in the real collision, they are merely artifacts of the reconstruction algorithms. As such, ghost tracks are highly undesirable, but this is where the Kalman fitter comes into play. 
 The Kalman fitter basically refines the rough tracks that are spit out by preceding algorithms. The state of a particle can be described by its position, direction, and the quotient of its charge and momentum. The Kalman fitter first estimates the particle's state at its birth position based on the Velo hits alone. After that, it extrapolates the state of the particle to the next hit, or in other words, simulates the particle's travel until the next hit using the laws of physics. The new, \textit{predicted} state will have some deviation to the \textit{observed} state (that is, the hit), however, the Kalman fitter can make a mathematically optimal estimate for the true state based on the prediction and observation. The very new optimal state estimate will then be extrapolated to the next hit again, and this repeats for all the hits of the track.
 As a result, the estimated state or path of the particle aligns more closely with the observed hits. In the case of ghost tracks, we can expect to have large deviations between the optimal estimated states and the observed hits, which could slipped through initial reconstruction algorithms but show up for the fitter. Such tracks are removed from the list of tracks, and that's why fitting is important.
 
@@ -498,8 +504,91 @@ In light of the code changes and their effect on the overall performance, we can
 
 
 
-\section{Vectorizing and optimizing the VeloUT algorithm}
+\section{Vectorizing and optimizing the Velo-UT algorithm}\label{sec_opt_velout}
 
+
+As highlighted in \ref{sec_reco_sw_overview}, the Velo-UT algorithm extends the straight line tracks created in the VELO tracking algorithm by assigning UT silicon strip hits to it. More importantly, the Velo-UT algorithm provides a course estimate for the momentum of the particle, allowing efficient tracking in the FT.
+The algorithm takes roughly 10 percent of the pipeline, so optimizing it is not expected to provide a high overall gain in performance, however its code is outdated and is in much need of an overhaul. My goal for the Velo-UT was to streamline the code to adhere to modern coding practices, and in the meantime, to make the algorithm play well with modern CPU architectures. In light of this, I was aiming at a highly SIMD-vectorized\textcolor{red}{TODO: add appendix} code, which operates with SOA\textcolor{red}{TODO: add appendix} data structures
+
+\subsection{Geometry of the UT detector}
+
+\begin{figure}[H]
+	\begin{center}
+		\includegraphics[width=0.7\textwidth]{detector_ut_geometry}
+	\end{center}
+	\caption{Illustration of the key elements of the UT hardware.}
+	\label{fig_ut_geometry}
+\end{figure}
+
+Figure \ref{fig_ut_geometry} shows the rectangular panels of the UT as looking down the detector from the VELO. The UT detector consists of four panels, their placement in the entire detector can be seen on figure \ref{fig_lhcb_geometry}. Each of the four panels is made up 10 cm by 10 cm sensors. Though both the front two and rear two panels contain 14 rows of sensors, the rear panels are wider. The middle two panels have their sensors tilted by +5 and -5 degrees, which helps to mitigate the poor vertical resolution resulting from using silicon strips instead of pixel detectors. Each sensor contains silicon strips that run the full length of 10 cm of the sensor. There are 512 strips next to each other on every sensor. The exceptions are the sensor near the center of the panels, since the ones marked in yellow contain 1024 strips, and the ones marked in red contain 1024 half-length strips. The higher density area in the middle is required to deal with increased luminousity in the axis of the beam pipe. For each collision event, the software receives a list of the silicon strips that were hit by a particle. The Technical Design Report for the LHCb tracker\cite{tracker_tdr} explains the geometry in more detail.
+
+\subsection{Decoding of the raw data from the detector}
+
+Each silicon strip has a unique numeric identifier. During a collision event, the electronics of the UT detector compile a list of identifiers of the strips that were hit by a particle, which the software receives in a heaavily compressed format. With a description of the exact geometry of the detector, that is, the location and dimension of sensors and strips in the global 3D space, the software is able to represent the strips that were hit by a line segment in the 3D space instead of just an ID. The UTHits resulting from the  decoding process are gathered into a HitHandler structure, which groups the hits by which sensor they belong to. The Velo-UT algorithm consumes the HitHandler alongside the VELO tracks to produce \textit{upstream} tracks.
+
+
+\subsection{The original Velo-UT algorithm}\label{sec_velout_desc}
+
+The main idea of the Velo-UT algorithm is to consume the VELO tracks and the UT hits, and extend the VELO tracks with hits from the UT to create so called \textit{upstream} tracks. The algorithm handles each VELO track separately. The process for a single VELO tracks can be broken down into the following steps:
+
+\begin{enumerate}
+	\item Skip track if unstuitable
+	\item Extrapolate VELO track to the UT detector
+	\item Gather UT hits that are close to the extrapolated track
+	\item Find 3 or 4 UT hits that align in a line
+	\item Analyze the \textit{track candidates} that consist of the VELO track + 3-4 UT hits
+	\item Select the best candidate (if any) to extend the VELO track
+\end{enumerate}
+
+\subsubsection{Filtering tracks}
+
+Any kind of tracks can be fed into the algorithm from the VELO tracking. Some tracks point to the wrong direction, away from the UT, other tracks go very close to the beamline and hit the central hole in the UT's panels, and some tracks may also simply miss the UT's panels as they go too much to the sides. These tracks are not worth trying to extend because there will be no solution, so they are dropped.
+
+\subsubsection{Extrapolating tracks}
+
+Tracks from the VELO are described by the \textit{state} of the particle. The state is a tuple of x,y and z coordinates, and the slopes tx=dx/dz and ty=dy/dz. In other words, the particle has a position [x,y,z] and has a velocity vector in the direction [tx,ty,1]. The usual coordinate system (see \ref{sec_coordinate_system}) is used for the states as well. To gather UT hits, one has to know where a track crosses a particular panel of the UT, which can be calculated by extrapolating the x,y,z position of the state to the z position of the panel along to line given by the slopes.
+
+\subsubsection{Gathering UT hits}
+
+Once the state is extrapolated to the z coordinate of a panel, one can collect hits that are close to the x and y position of the extrapolated state. The implementation of the algorithm first collects the list of the 10 by 10 centimeter sensors that fall close enough to the extrapolated state. In case the track passes through the middle of one sensor, only one sensor will be tagged, however if the track hits the corner between four sensors, all the four may be tagged. Afterwards, the algorithm iterates through all the hits that belong to the tagged sensors, and checks for each hit if they are within tolerance to the extrapolated state. This, including the extrapolation, is repeated for all four panels, thus the final result is a set of close-by hits for each of the four panels.
+
+\subsubsection{Finding aligned hits}
+
+There are on average 2-3 hits returned for each panel. Among these hits, the algorithm tries to find 3 or 4 hits that form a fairly straight line. These are called track candidates, and since there may be multiple sets of hits that form a straight line, the algorithm must decide on which is the best candidate.
+
+\subsubsection{Analyzing candidates}
+
+Each candidate that belongs to a track goes through a fitting stage. This is much like curve fitting or linear regression, the algorithm find a mathematically optimal set of parameters that best describe the path of the particle that have created the UT hits of the candidate. 
+
+\subsection{Selecting the best candidate}
+
+The error of the fitting of a candidate can be calculated by determining how far the parameterized path of the particle lies from the position of the UT hits it was fitted from. If any of the candidates have a sufficiently low error, the one with the lowest is picked to form the newly created upstream track.
+
+
+\subsection{Implementation and its pitfalls for the original Velo-UT algorithm}
+
+\subsubsection{Gathering hits}
+
+\textcolor{red}{TODO: add picture from profiler}
+
+The largest part of the Velo-UT algorithm is collecting the hits that belong to a track, which can be seen on figure \textcolor{red}{ref to figure}. Upon closely inspecting the \href{https://gitlab.cern.ch/lhcb/Rec/blob/1b7edc5aea96f2225601238b3f64e478e41b6c70/Pr/PrVeloUT/src/PrVeloUT.cpp#L278}{code}, we can see a complex flow control logic and several calls to distant services.
+
+The algorithm loops over the four panels, extrapolates to track to them, and finds the sensors that fall close to the extrapolated track. In the next step, the algorithm loops over the found sensors, and collects each hit that falls within a certain distance of the extrapolated track.
+
+One issue with this is that there is no need to base the lookup of hits close to a track on sensors, any kind of space partitioning can be used to make it more efficient. Second, the grouping of hits by sensors that is done by the HitHandler, requires the HitHandler to either perform a complete sorting of the hits by their sensor or to receive the hits in a particular order. The former option takes O(nlogn) time, while the latter make the implementation error-prone and fragile to change. Groouping by sensors could be implemented in a robust and efficient manner, but migrating to uniform grid space partitioning seemed like a better solution.
+
+\subsubsection{Lack of vectorization}
+
+The Velo-UT algorithm processes tracks one by one. If, instead, the steps\ref{sec_velout_desc} were executed on all tracks at once, vectorization opportunities could be exploited. Some parts, such as the extrapolation of tracks can be perfectly vectorized, other parts, like gathering the hits are more difficult, while the finding of aligned hits is not feasible at all. With SIMD, 4 to 16 (depending on the CPU ISA) tracks can be extrapolated at the same time instead of just one.
+
+\subsubsection{Overcomplicated flow control}
+
+\textcolor{red}{do a microarch exploration and attach branching inefficiency profiling}
+The implementation heavily relies on early exit conditions, that is, the code detects early on if the results will be unsatisfactory, and skips the execution of the remaining code. While this seems intuitive to cut computation times back, it may achieve the opposite effect on modern CPUs. Each time a CPU hits a branching point in the code (e.g, if statement), it tries to guess which branch will be chosen, and starts executing the predicted branch before the condition of the if statement is evaluated. If the CPU guessed wrong, it has to unroll the entire branch, and restart the correct one. While the CPU generally makes very accurate predictions, the cost of a misprediction is high, which gives motivation to structure code in a branchless fashion. Additionally, branchless code is easier to vectorize.
+
+\subsubsection{Flawed code design}
+
+The code violates several coding best practices, which is not strictly an optimization problem, but is still an important concern as it is hard to find optimization opportunities in code that is hard to reason about. The most severe breaches are the single responsibility and dependency inversion priciples. An example for the former is \href{https://gitlab.cern.ch/lhcb/Rec/blob/1b7edc5aea96f2225601238b3f64e478e41b6c70/Pr/PrVeloUT/src/PrVeloUT.cpp#L337}{formClusters}, which not only find aligned hits but also parametrically fits them, an example for the latter is \href{https://gitlab.cern.ch/lhcb/Rec/blob/1b7edc5aea96f2225601238b3f64e478e41b6c70/Pr/PrVeloUT/src/PrVeloUT.h#L191}{simpleFit}, which modifies the flow control of its caller (formClusters) via modification of in-out (quasi-global) parameters. When the problems are alleviated, the search for aligned hits and the fitting can be done completely separately, which provides a massive gain thanks to the perfect vectorization of the fitting process.
 
 
 
@@ -537,30 +626,12 @@ BRIEFLY
 		\url{http://alicematters.web.cern.ch/?q=FAQ-why-lead-ions}
 	\bibitem{lhc_energy} Energy of the LHC: \\
 		\url{https://home.cern/about/engineering/restarting-lhc-why-13-tev}
-	\bibitem{lhc_bunch_collisions} 		https://lhc-machine-outreach.web.cern.ch/lhc-machine-outreach/collisions.htm
-	\bibitem{lhc_facts_and_figures}
-	https://public-archive.web.cern.ch/en/LHC/Facts-en.html
+	\bibitem{lhc_bunch_collisions} LHC collisions: \\
+		\url{https://lhc-machine-outreach.web.cern.ch/lhc-machine-outreach/collisions.htm}
+	\bibitem{lhc_facts_and_figures} LHC facts and figures: \\
+		\url{https://public-archive.web.cern.ch/en/LHC/Facts-en.html}
+	\bibitem{tracker_tdr} Tracker (UT and FT) Technical Design Report: \\
+		\url{https://cds.cern.ch/record/1647400?ln=en}
 \end{thebibliography}
 
 \end{document}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
